# fork-verl

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/algo/: grpo.md
docs/examples/: gsm8k_example.rst
docs/start/: install.rst  quickstart.rst
examples/data_preprocess/: gsm8k.py
examples/grpo_trainer/: run_qwen2_5-0.5b_gsm8k_grpo_lora.sh
examples/sft/gsm8k/: run_qwen_05_peft.sh
recipe/char_count/: README.md  create_dataset.py  reward_function.py
recipe/minicpmo/: rl_dataset.py
recipe/prime/: main_prime.py  prime_fsdp_workers.py
scripts/: format.sh
tests/special_e2e/sft/: test_sp_loss_match.py
tests/utils/: test_fs_on_cpu.py
tests/workers/rollout/: test_hf_rollout.py
tests/workers/rollout/rollout_vllm/: run_fsdp_vllm.py  test_vllm_spmd.py
verl/: protocol.py
verl/models/transformers/: monkey_patch.py
verl/trainer/: fsdp_sft_trainer.py
verl/utils/: device.py  distributed.py  fs.py  fsdp_utils.py  hdfs_io.py  import_utils.py  model.py  py_functional.py  tokenizer.py  torch_dtypes.py  torch_functional.py  ulysses.py
verl/utils/dataset/: multiturn_sft_dataset.py  rl_dataset.py  sft_dataset.py
verl/utils/debug/: performance.py
verl/utils/profiler/: performance.py
verl/utils/reward_score/: math_reward.py
verl/workers/sharding_manager/: base.py  fsdp_ulysses.py
